--- a/sass/layout/explorer.scss
+++ b/sass/layout/explorer.scss
@@ -1,6 +1,7 @@
 @use "../utils/box-shadows.scss";
 @use "../utils/mixins.scss";
 @use "../utils/colors.scss";
+@use "../utils/linear-gradient.scss";
 
 .explorer{
     padding: 2rem;
@@ -17,6 +18,7 @@
   }
   &__btn{
     @include mixins.base-button;
+    @include linear-gradient.gradient(0.9);
   }
 
   }
