--- a/sass/pages/restaurant.scss
+++ b/sass/pages/restaurant.scss
@@ -1,6 +1,5 @@
 @use "../utils/variables.scss";
 @use "../utils/colors.scss";
-@use "../utils/box-shadows.scss";
 @use "../utils/animations.scss";
 @use "../utils/mixins.scss";
 
@@ -80,7 +79,7 @@ body{
             &:hover{
                 cursor: pointer;
             }
-            @include box-shadows.design-shadow;
+            @include mixins.design-shadow;
             .menu-item__price{
                 display: flex;
                 align-items: flex-end;
