--- a/style.css
+++ b/style.css
@@ -217,25 +217,59 @@ h1, h2, h3, h4, h5, h6, p {
   background-color: white;
   border-radius: 0 0 1rem 1rem;
   padding: 1rem;
+  /*            &:hover .fa-solid{
+              opacity: 1;
+             } */
 }
-#home-page .menus .card__description i {
+#home-page .menus .card__description::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+  content: "\f004";
   font-size: 2rem;
   position: absolute;
   right: 1rem;
   top: 50%;
   transform: translateY(-50%);
-}
-#home-page .menus .card__description .fa-solid {
-  color: transparent;
+  color: black;
   background-clip: text;
   -webkit-background-clip: text;
-  opacity: 0;
+  opacity: 1;
+  transition: all 200ms ease-in-out;
+  transform: translateY(-50%) scale(1.2);
+}
+#home-page .menus .card__description::after {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+  content: "\f004";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: black;
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 1;
   transition: all 200ms ease-in-out;
   transform: translateY(-50%) scale(1.2);
   background-image: linear-gradient(to top, rgb(147, 86, 220), rgb(255, 121, 218));
+  opacity: 0;
+  font-weight: 900;
+  color: transparent;
 }
-#home-page .menus .card__description:hover .fa-solid {
+#home-page .menus .card__description:hover::after {
   opacity: 1;
+  transform: translateY(-50%) scale(1.3);
 }
 #home-page .menus__container {
   display: grid;
