--- a/sass/pages/restaurant.scss
+++ b/sass/pages/restaurant.scss
@@ -31,7 +31,20 @@ body{
         display: flex;
         justify-content: space-between;
         padding: 2rem 1rem;
-        
+        &::before{
+            @include mixins.heart;
+         }
+         &::after{
+            @include mixins.heart;
+            @include mixins.gradient(1);
+            opacity: 0;
+            font-weight: 900;
+            color: transparent;
+            }
+        &:hover::after{
+           opacity: 1; 
+           transform: translateY(-50%) scale(1.3);
+        }        
     }
 }
 
