--- a/style.css
+++ b/style.css
@@ -353,6 +353,56 @@ body {
   justify-content: space-between;
   padding: 2rem 1rem;
 }
+#resto-page .resto__title h2::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+  content: "\f004";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: black;
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 1;
+  transition: all 200ms ease-in-out;
+  transform: translateY(-50%) scale(1.2);
+}
+#resto-page .resto__title h2::after {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+  content: "\f004";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: black;
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 1;
+  transition: all 200ms ease-in-out;
+  transform: translateY(-50%) scale(1.2);
+  background-image: linear-gradient(to top, rgb(147, 86, 220), rgb(255, 121, 218));
+  opacity: 0;
+  font-weight: 900;
+  color: transparent;
+}
+#resto-page .resto__title h2:hover::after {
+  opacity: 1;
+  transform: translateY(-50%) scale(1.3);
+}
 #resto-page .menus {
   background-color: #f6f6f6;
   display: grid;
