--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -25,24 +25,9 @@
             }
         } 
         &__description{
-            position: relative;
             background-color: white;
             border-radius: 0 0 1rem 1rem;
-            padding: 1rem;
-            &::before{
-                @include mixins.heart;
-             }
-             &::after{
-                @include mixins.heart;
-                @include mixins.gradient(1);
-                opacity: 0;
-                font-weight: 900;
-                color: transparent;
-                }
-            &:hover::after{
-               opacity: 1; 
-               transform: translateY(-50%) scale(1.3);
-            }
+            @include mixins.heart-animation;
 
         }                      
     }
