--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -1,17 +1,18 @@
 @use "../../sass/utils/colors.scss";
 @use "../../sass/utils/variables.scss";
+@use "./../utils/mixins.scss";
 footer{
     background-color:colors.$dark-grey;
     padding: 1rem 7rem;
     @media(max-width:variables.$breakpoint){
         padding: 1rem ;  
     }
+    @include mixins.big-scree-padding;
     color: white;
     h2{
         font-family: "Shrikhand", "sans-serif";
         font-weight: 500;
         padding: 1rem 0;
-        
     }
     p{
         padding: 0.2rem;
