--- a/sass/layout/city.scss
+++ b/sass/layout/city.scss
@@ -2,14 +2,15 @@
     display: flex;
     justify-content: center;
     font-size: 1.2rem;
-    padding: 2rem;
+    padding: 1.25rem 1rem;    
     background-color: #f3f3f3;
     position: relative;
     gap: 1rem;
     & fa-location{
       font-weight: 900;
     }
-    & text{
+    h2{
       font-weight: 700;
+      font-size: 1.2rem;
     }
   }
