--- a/sass/layout/explorer.scss
+++ b/sass/layout/explorer.scss
@@ -4,15 +4,14 @@
 .explorer{
     padding: 2rem;
     text-align: center;
-    background-color:white;
+    background-color: #fafafa;
   &__title{
-    margin-top: 1.5rem;
     font-size: 1.5rem;
   }
   &__subtitle{
     font-size: 1rem;
     font-weight: 300;
-    margin-bottom: 1.5rem;
+    margin: 1.5rem;
   }
   &__btn{
     @include mixins.base-button;
