--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -10,7 +10,7 @@
         padding-bottom: 2rem;
         
     h2{
-        margin-left: 1rem;
+        margin: 1rem;
     }
     .card{
         &__image{
@@ -26,6 +26,7 @@
         } 
         &__description{
             background-color: white;
+            padding: 0.75rem 1.5rem;
             border-radius: 0 0 1rem 1rem;
             @include mixins.heart-animation;
 
@@ -36,10 +37,9 @@
         grid-template-columns: repeat(2,1fr);
         gap:2rem;
         margin:0 1rem; 
-        @media (max-width:variables.$breakpoint) {
-            grid-template-columns: repeat(1,1fr);
-                         
-        }
+       @media (max-width:variables.$breakpoint) {
+            grid-template-columns: repeat(1,1fr);        
+        } 
         .new{
          position: relative;  
         }
