--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -1,68 +1,80 @@
+@use "./variables.scss";
 @mixin design-shadow {
   box-shadow: 0.25rem 0.25rem 5px rgb(0 0 0 / 25%);
-
 }
 
 @mixin base-button {
-    border: 0;
-    padding: 0.75rem 1.5rem;
-    font-weight: 500;
-    font-size: 1.1rem;
-    border-radius: 100px;
-    color: #fff;
-    background-color: #686868;
-    background-image: linear-gradient(to top ,rgba(147,86,220,.9),rgba(255,121,218,.9));
-    cursor: pointer;
-    transition-duration: .25s;
-    @include design-shadow;
-    &:hover{
-        transform: scale(1.02);
-        opacity: 0.9;;
-      }
-
+  border: 0;
+  padding: 0.75rem 1.5rem;
+  font-weight: 500;
+  font-size: 1.1rem;
+  border-radius: 100px;
+  color: #fff;
+  background-color: #686868;
+  background-image: linear-gradient(
+    to top,
+    rgba(147, 86, 220, 0.9),
+    rgba(255, 121, 218, 0.9)
+  );
+  cursor: pointer;
+  transition-duration: 0.25s;
+  @include design-shadow;
+  &:hover {
+    transform: scale(1.02);
+    opacity: 0.9;
+  }
 }
 
-@mixin gradient ($opacity:0.9) {
-  background-image: linear-gradient(to top ,rgba(147,86,220,$opacity),rgba(255,121,218,$opacity));
-
+@mixin gradient($opacity: 0.9) {
+  background-image: linear-gradient(
+    to top,
+    rgba(147, 86, 220, $opacity),
+    rgba(255, 121, 218, $opacity)
+  );
 }
 
-@mixin heart ($opacity:1,$font-weight:400, $color:inherit) {
+@mixin heart($opacity: 1, $font-weight: 400, $color: inherit) {
   display: inline-block;
   font-style: normal;
   font-variant: normal;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free"; 
-  font-weight: $font-weight; 
+  font-family: "Font Awesome 5 Free";
+  font-weight: $font-weight;
   content: "\f004";
-  font-size: 2rem;
-position: absolute;
-right:1rem;
-top:50%;
-transform:translateY(-50%);
-color: $color;
-background-clip:text ;
--webkit-background-clip:text;
-opacity: $opacity;
-transition: all 200ms ease-in-out;
-transform: translateY(-50%) scale(1.2);
+  font-size: 1.5rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: $color;
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: $opacity;
+  transition: all 200ms ease-in-out;
+  transform: translateY(-50%) scale(1.2);
 }
 
-@mixin heart-animation{
+@mixin heart-animation {
   position: relative;
-  &::before{
-      @include heart;
-   }
-   &::after{
-      @include heart;
-      @include gradient(1);
-      opacity: 0;
-      font-weight: 900;
-      color: transparent;
-      }
-  &:hover::after{
-     opacity: 1; 
-     transform: translateY(-50%) scale(1.3);
-  }  
+  &::before {
+    @include heart;
+  }
+  &::after {
+    @include heart;
+    @include gradient(1);
+    opacity: 0;
+    font-weight: 900;
+    color: transparent;
+  }
+  &:hover::after {
+    opacity: 1;
+    transform: translateY(-50%) scale(1.3);
+  }
+}
+
+@mixin big-scree-padding{
+  @media (min-width: variables.$large-screen) {
+    padding: 1rem 40rem;
+}
 }
