--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -17,6 +17,7 @@
             border-radius: 1rem 1rem 0 0;
             height: 15rem;
             background-size: cover;
+            background-position: center;
             
         }
         @for $i from 1 through 4{
