--- a/sass/pages/restaurant.scss
+++ b/sass/pages/restaurant.scss
@@ -14,6 +14,7 @@ body{
        max-height: 32rem;
         width: 100%;
         object-fit: cover;
+        object-position: center;
     }
 .resto-main{
     padding: 1rem;
