--- a/style.css
+++ b/style.css
@@ -1,571 +1,18 @@
-@charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Shrikhand&display=swap");
-/* grosseur des bulles d'étape du tuto tuto.scss */
-/* breakpoint pour passer de deux colonnes à une sur les petits écrans - footer/menu/restaurant.scss */
-/* breakpoint pour centrage du design sur les plus grands écrans - tuto .scss */
-/* durée de l'animation du loader - explorer.scss */
-/* nombre de spin du loader - explorer.scss */
-/* nombre d'items du menu- restaurant.scss */
-/* largeur du bouton checked- restaurant.scss */
-*,
-::before,
-::after {
-  box-sizing: border-box;
-}
+/* Error: There is no module with the namespace "npnvariables".
+ *     ,
+ * 105 |             width: npnvariables.$button-width;
+ *     |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
+ *     '
+ *   sass\pages\restaurant.scss 105:20  @use
+ *   style.scss 8:1                     root stylesheet */
 
-body {
-  margin: 0px;
-  font-family: "roboto", sans-serif;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: There is no module with the namespace "npnvariables".\a     \2577 \a 105 \2502              width: npnvariables.$button-width;\d\a     \2502                     ^^^^^^^^^^^^^^^^^^^^^^^^^^\a     \2575 \a   sass\\pages\\restaurant.scss 105:20  @use\a   style.scss 8:1                     root stylesheet';
 }
-
-main {
-  padding: 0 7rem;
-}
-@media (max-width: 1000px) {
-  main {
-    padding: 0;
-  }
-}
-@media (min-width: 2560px) {
-  main {
-    padding: 1rem 40rem;
-  }
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-h1, h2, h3, h4, h5, h6, p {
-  padding: 0;
-  margin: 0;
-}
-
-.header {
-  font-family: "Shrikhand", cursive;
-  text-align: center;
-  padding: 1rem;
-  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
-  margin: 0px;
-  position: relative;
-  z-index: 1;
-}
-.header__arrow {
-  position: absolute;
-  left: 2rem;
-  height: 2rem;
-  width: 2rem;
-  top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transform: translateY(-50%);
-  font-size: 1.5rem;
-  color: #000;
-}
-
-.header .title {
-  margin: 0.5rem;
-}
-
-.city {
-  display: flex;
-  justify-content: center;
-  font-size: 1.2rem;
-  padding: 1.25rem 1rem;
-  background-color: #f3f3f3;
-  position: relative;
-  gap: 1rem;
-}
-.city fa-location {
-  font-weight: 900;
-}
-.city h2 {
-  font-weight: 700;
-  font-size: 1.2rem;
-}
-
-.explorer {
-  padding: 2rem;
-  text-align: center;
-  background-color: #fafafa;
-}
-.explorer__title {
-  font-size: 1.5rem;
-}
-.explorer__subtitle {
-  font-size: 1rem;
-  font-weight: 300;
-  margin: 1.5rem;
-}
-.explorer__btn {
-  border: 0;
-  padding: 0.75rem 1.5rem;
-  font-weight: 500;
-  font-size: 1.1rem;
-  border-radius: 100px;
-  color: #fff;
-  background-color: #686868;
-  background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  cursor: pointer;
-  transition-duration: 0.25s;
-  box-shadow: 0.25rem 0.25rem 5px rgba(0, 0, 0, 0.25);
-  background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-}
-.explorer__btn:hover {
-  transform: scale(1.02);
-  opacity: 0.9;
-}
-
-.loader {
-  display: grid;
-  place-items: center;
-  position: fixed;
-  background-color: white;
-  inset: 0;
-  height: 100vh;
-  z-index: 1000;
-  opacity: 0.97;
-  transform-origin: top;
-  animation: disappear 200ms 3s forwards;
-}
-.loader::after {
-  content: "";
-  height: 200px;
-  width: 200px;
-  border: 5px transparent solid;
-  border-top: #9356dc solid 5px;
-  border-bottom: #99E2D0 solid 5px;
-  border-radius: 50%;
-  animation: spin 1s infinite ease-in-out;
-  animation-iteration-count: 3;
-}
-
-@keyframes disappear {
-  to {
-    transform: scale(0);
-  }
-}
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-.container {
-  margin: 1rem;
-}
-
-.tuto {
-  padding: 1rem;
-  background-color: white;
-  counter-reset: steps;
-}
-@media (min-width: 2560px) {
-  .tuto {
-    padding: 1rem 40rem;
-  }
-}
-.tuto ol {
-  display: flex;
-  padding-left: 1rem;
-  gap: 2rem;
-}
-@media (max-width: 1000px) {
-  .tuto ol {
-    flex-direction: column;
-  }
-}
-.tuto li {
-  display: flex;
-  align-items: center;
-  position: relative;
-  list-style-type: none;
-  background-color: #f6f6f6;
-  padding: 1.5rem;
-  flex-grow: 1;
-  border-radius: 1rem;
-  border: solid 1px 0;
-  box-shadow: 0.25rem 0.25rem 5px rgba(0, 0, 0, 0.25);
-}
-.tuto li::before {
-  content: counter(steps);
-  counter-increment: steps;
-  color: white;
-  background: #9356dc;
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  display: grid;
-  place-items: center;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: -1rem;
-}
-.tuto li:hover {
-  background-color: #e4d5f6;
-}
-.tuto li:hover i::before {
-  color: #9356dc;
-}
-.tuto i.fas {
-  margin-right: 1rem;
-  color: #7e7e7e;
-}
-
-#home-page .menus {
-  background-color: #f6f6f6;
-  margin-bottom: 2rem;
-  padding-bottom: 2rem;
-}
-#home-page .menus h2 {
-  margin: 1rem;
-}
-#home-page .menus .card__image {
-  border-radius: 1rem 1rem 0 0;
-  height: 15rem;
-  background-size: cover;
-  background-position: center;
-}
-#home-page .menus .card__image-1 {
-  background-image: url(../../images/menu-1.jpg);
-}
-#home-page .menus .card__image-2 {
-  background-image: url(../../images/menu-2.jpg);
-}
-#home-page .menus .card__image-3 {
-  background-image: url(../../images/menu-3.jpg);
-}
-#home-page .menus .card__image-4 {
-  background-image: url(../../images/menu-4.jpg);
-}
-#home-page .menus .card__description {
-  background-color: white;
-  padding: 0.75rem 1.5rem;
-  border-radius: 0 0 1rem 1rem;
-  position: relative;
-}
-#home-page .menus .card__description::before {
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 400;
-  content: "\f004";
-  font-size: 1.5rem;
-  position: absolute;
-  right: 1rem;
-  top: 50%;
-  transform: translateY(-50%);
-  color: inherit;
-  background-clip: text;
-  -webkit-background-clip: text;
-  opacity: 1;
-  transition: all 200ms ease-in-out;
-  transform: translateY(-50%) scale(1.2);
-}
-#home-page .menus .card__description::after {
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 400;
-  content: "\f004";
-  font-size: 1.5rem;
-  position: absolute;
-  right: 1rem;
-  top: 50%;
-  transform: translateY(-50%);
-  color: inherit;
-  background-clip: text;
-  -webkit-background-clip: text;
-  opacity: 1;
-  transition: all 200ms ease-in-out;
-  transform: translateY(-50%) scale(1.2);
-  background-image: linear-gradient(to top, rgb(147, 86, 220), rgb(255, 121, 218));
-  opacity: 0;
-  font-weight: 900;
-  color: transparent;
-}
-#home-page .menus .card__description:hover::after {
-  opacity: 1;
-  transform: translateY(-50%) scale(1.3);
-}
-#home-page .menus__container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
-  margin: 0 1rem;
-}
-@media (max-width: 1000px) {
-  #home-page .menus__container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-#home-page .menus__container .new {
-  position: relative;
-}
-#home-page .menus__container .new::before {
-  content: "Nouveau";
-  position: absolute;
-  width: 5rem;
-  height: 2rem;
-  background-color: #99E2D0;
-  color: #1b6150;
-  display: grid;
-  place-items: center;
-  right: 1rem;
-  top: 1rem;
-}
-
-footer {
-  background-color: #353535;
-  padding: 1rem 7rem;
-  color: white;
-}
-@media (max-width: 1000px) {
-  footer {
-    padding: 1rem;
-  }
-}
-@media (min-width: 2560px) {
-  footer {
-    padding: 1rem 40rem;
-  }
-}
-footer h2 {
-  font-family: "Shrikhand", "sans-serif";
-  font-weight: 500;
-  padding: 1rem 0;
-}
-footer p {
-  padding: 0.2rem;
-}
-footer i {
-  margin-right: 0.5rem;
-}
-
-@keyframes appear {
-  0% {
-    transform: translateY(50%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-body {
-  background-color: #f6f6f6;
-}
-
-#resto-page .preview img {
-  max-height: 32rem;
-  width: 100%;
-  object-fit: cover;
-  object-position: center;
-}
-#resto-page .resto-main {
-  padding: 1rem;
-  background-color: #f6f6f6;
-}
-#resto-page .resto__title {
-  padding: 0 1rem;
-  background-color: #f6f6f6;
-  margin-top: -2rem;
-  position: relative;
-  border-radius: 2rem 2rem 0 0;
-}
-#resto-page .resto__title h2 {
-  font-family: "Shrikhand", "sans-serif";
-  display: flex;
-  justify-content: space-between;
-  padding: 2rem 1rem;
-  position: relative;
-}
-#resto-page .resto__title h2::before {
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 400;
-  content: "\f004";
-  font-size: 1.5rem;
-  position: absolute;
-  right: 1rem;
-  top: 50%;
-  transform: translateY(-50%);
-  color: inherit;
-  background-clip: text;
-  -webkit-background-clip: text;
-  opacity: 1;
-  transition: all 200ms ease-in-out;
-  transform: translateY(-50%) scale(1.2);
-}
-#resto-page .resto__title h2::after {
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 400;
-  content: "\f004";
-  font-size: 1.5rem;
-  position: absolute;
-  right: 1rem;
-  top: 50%;
-  transform: translateY(-50%);
-  color: inherit;
-  background-clip: text;
-  -webkit-background-clip: text;
-  opacity: 1;
-  transition: all 200ms ease-in-out;
-  transform: translateY(-50%) scale(1.2);
-  background-image: linear-gradient(to top, rgb(147, 86, 220), rgb(255, 121, 218));
-  opacity: 0;
-  font-weight: 900;
-  color: transparent;
-}
-#resto-page .resto__title h2:hover::after {
-  opacity: 1;
-  transform: translateY(-50%) scale(1.3);
-}
-#resto-page .menus {
-  background-color: #f6f6f6;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
-}
-@media (max-width: 1000px) {
-  #resto-page .menus {
-    grid-template-columns: 1fr;
-  }
-}
-#resto-page .menus h3 {
-  text-transform: uppercase;
-  font-weight: 400;
-  position: relative;
-}
-#resto-page .menus h3::after {
-  content: "";
-  position: absolute;
-  top: 1.5rem;
-  left: 0;
-  height: 0.25rem;
-  width: 3rem;
-  background-color: #99E2D0;
-}
-#resto-page .menus__category {
-  overflow: hidden;
-}
-#resto-page .menus__category .menu-item {
-  background-color: white;
-  display: flex;
-  border-radius: 1rem;
-  overflow: hidden;
-  margin: 1.5rem 0.5rem;
-  animation: appear 3s;
-  animation-fill-mode: both;
-  box-shadow: 0.25rem 0.25rem 5px rgba(0, 0, 0, 0.25);
-}
-#resto-page .menus__category .menu-item:nth-child(1) {
-  animation-delay: 100ms;
-}
-#resto-page .menus__category .menu-item:nth-child(2) {
-  animation-delay: 200ms;
-}
-#resto-page .menus__category .menu-item:nth-child(3) {
-  animation-delay: 300ms;
-}
-#resto-page .menus__category .menu-item:hover {
-  cursor: pointer;
-}
-#resto-page .menus__category .menu-item .menu-item__price {
-  display: flex;
-  align-items: flex-end;
-  margin-left: auto;
-  font-weight: 900;
-  padding: 1rem;
-}
-#resto-page .menus__category .menu-item .menu-item__description {
-  padding: 1rem;
-  overflow: hidden;
-}
-#resto-page .menus__category .menu-item .menu-item__description h4, #resto-page .menus__category .menu-item .menu-item__description p {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-#resto-page .menus__category .menu-item .menu-item__checked {
-  display: grid;
-  place-items: center;
-  flex-shrink: 0;
-  background-color: #99E2D0;
-  margin-right: -4rem;
-  width: 4rem;
-  transition: margin-right 0.5s;
-}
-#resto-page .menus__category .menu-item .menu-item__checked i {
-  display: grid;
-  place-items: center;
-  background: white;
-  height: 2rem;
-  width: 2rem;
-  border-radius: 1rem;
-  color: #99E2D0;
-}
-#resto-page .menus__category .menu-item:hover .menu-item__checked {
-  margin-right: 0;
-}
-#resto-page .menus__category .menu-item:hover i {
-  animation: check-spin 0.5s ease-in-out;
-}
-@keyframes check-spin {
-  0% {
-    transform: rotate(270deg);
-  }
-  100% {
-    transform: rotate(0);
-  }
-}
-#resto-page .order {
-  height: 20vh;
-  display: grid;
-  place-items: center;
-}
-#resto-page .order button {
-  border: 0;
-  padding: 0.75rem 1.5rem;
-  font-weight: 500;
-  font-size: 1.1rem;
-  border-radius: 100px;
-  color: #fff;
-  background-color: #686868;
-  background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  cursor: pointer;
-  transition-duration: 0.25s;
-  box-shadow: 0.25rem 0.25rem 5px rgba(0, 0, 0, 0.25);
-}
-#resto-page .order button:hover {
-  transform: scale(1.02);
-  opacity: 0.9;
-}
-#resto-page .large {
-  background-color: white;
-}
-@media (min-width: 2560px) {
-  #resto-page .large {
-    padding: 1rem 40rem;
-  }
-}
-
-/*# sourceMappingURL=style.css.map */
