--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -22,7 +22,7 @@
         }
         @for $i from 1 through 4{
             &__image-#{$i}{
-                background-image: url(./images/menu-#{$i}.jpg);
+                background-image: url(../images/menu-#{$i}.jpg);
             }
         } 
         &__description{
